# desktop-duplication

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pch.h
